--- a/index.html
+++ b/index.html
@@ -1,12 +1,115 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
 
-  </body>
+<body>
+  <a class="main-logo">
+    <img src="" alt="Логотип" width="" height="">
+  </a>
+  <nav class="main-navigation">
+    <ul class="site-navigation">
+      <li>
+        <a href="#">Информация</a>
+      </li>
+      <li>
+        <a href="#">Фото и видео</a>
+      </li>
+      <li>
+        <a href="#">Карта штата</a>
+      </li>
+      <li>
+        <a href="#">Гостиницы</a>
+      </li>
+    </ul>
+  </nav>
+  <main>
+    <header class="main-header">
+      <b class="header-welcome">Welcome</b>
+      <p class="header-stile-description">to the gorgeous</p>
+      <h1 class="header-name">Sedona</h1>
+      <p class="header-quote">Because the Grand Canyon is sucks</p>
+    </header>
+    <div class="text-block">
+      <p class="slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+      <p class="text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+    </div>
+    <section class="reason-item">
+      <h2 class="visually-hidden">Причины, по которым Седона круче, чем Гранд Каньон</h2>
+      <h3>Настоящий городок</h3>
+      <h4>№1</h4>
+      <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+      <img src="" alt="Фото города">
+    </section>
+    <section class="recommendations">
+      <ul class="recommendations-list">
+        <li class="recommendation-item">
+          <h3>Жилье</h3>
+          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        </li>
+        <li class="recommendation-item">
+          <h3>Еда</h3>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li class="recommendation-item">
+          <h3>Сувениры</h3>
+          <p>Не только китайского, но и местного производства!</p>
+        </li>
+      </ul>
+    </section>
+    <section class="reason-item">
+      <h3>Там есть мост дьявола</h3>
+      <h4>№2</h4>
+      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      <img src="" alt="Фото каньона">
+    </section>
+    <section="reasons">
+      <ul class="reasons-list">
+        <li class="reason-item">
+          <h3>Небольшая площадь</h3>
+          <h4>№3</h4>
+          <p>Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="reason-item">
+          <h3>Красивая дорога</h3>
+          <h4>№4</h4>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="reason-item">
+          <h3>Мало туристов</h3>
+          <h4>№5</h4>
+          <p>Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+      </ul>
+      </section>
+      <section class="searching">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки,
+          <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button class="btn-search">Поиск гостиниц в Седоне</button>
+      </section>
+  </main>
+  <footer class="main-footer">
+    <p class="footer-hashtag">#Visitsedona</p>
+    <ul class="social-btn-list">
+      <li>
+        <a class="social-btn social-btn-twitter">T</a>
+      </li>
+      <li>
+        <a class="social-btn social-btn-twitter">T</a>
+      </li>
+      <li>
+        <a class="social-btn social-btn-yt">Y</a>
+      </li>
+    </ul>
+    <p>Website by</p>
+    <span>
+      <img src="" alt="Лого HTML-Academy">
+    </span>
+  </footer>
+</body>
+
 </html>
