Исправила некоторые ошибки

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <a class="main-logo">
-    <img src="" alt="Логотип" width="" height="">
+    <img src="http://placehold.it/150x100" alt="Логотип" width="150" height="100">
   </a>
   <nav class="main-navigation">
     <ul class="site-navigation">
@@ -42,7 +42,7 @@
       <h3>Настоящий городок</h3>
       <h4>№1</h4>
       <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-      <img src="" alt="Фото города">
+      <img src="http://placehold.it/150x100" alt="Фото города">
     </section>
     <section class="recommendations">
       <ul class="recommendations-list">
@@ -64,9 +64,9 @@
       <h3>Там есть мост дьявола</h3>
       <h4>№2</h4>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      <img src="" alt="Фото каньона">
+      <img src="http://placehold.it/150x100" alt="Фото каньона">
     </section>
-    <section="reasons">
+    <section class="reasons">
       <ul class="reasons-list">
         <li class="reason-item">
           <h3>Небольшая площадь</h3>
@@ -106,9 +106,9 @@
       </li>
     </ul>
     <p>Website by</p>
-    <span>
-      <img src="" alt="Лого HTML-Academy">
-    </span>
+    <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+      <img src="http://placehold.it/150x100" alt="Лого HTML-Academy">
+    </a>
   </footer>
 </body>
 
