--- a/inner.html
+++ b/inner.html
@@ -8,7 +8,7 @@
 
 <body>
   <a class="main-logo">
-    <img src="" alt="Логотип" width="" height="">
+    <img src="http://placehold.it/150x100" alt="Логотип" width="150" height="100">
   </a>
   <nav class="main-navigation">
     <ul class="site-navigation">
@@ -22,7 +22,7 @@
         <a href="#">Карта штата</a>
       </li>
       <li>
-        <a href="#">Гостиницы</a>
+        <a href="#" class="site-navigation-current">Гостиницы</a>
       </li>
     </ul>
   </nav>
@@ -38,10 +38,10 @@
   <ul class="hotels-list">
     <li class="hotels-list-item hotel">
       <h3>
-        <a>Amara resort & spa</a>
+        <a>Amara resort &amp; spa</a>
       </h3>
       <p>
-        <img src="" alt="Фото гостиницы">
+        <img src="http://placehold.it/150x100" alt="Фото гостиницы">
       </p>
       <table>
         <tr>
@@ -58,7 +58,7 @@
         <a>Desert Quail Inn</a>
       </h3>
       <p>
-        <img src="" alt="Фото апартаментов">
+        <img src="http://placehold.it/150x100" alt="Фото апартаментов">
       </p>
       <table>
         <tr>
@@ -76,7 +76,7 @@
         <a>Desert Quail Inn</a>
       </h3>
       <p>
-        <img src="" alt="Фото мотеля">
+        <img src="http://placehold.it/150x100" alt="Фото мотеля">
       </p>
       <table>
         <tr>
@@ -103,9 +103,9 @@
       </li>
     </ul>
     <p>Website by</p>
-    <span>
-      <img src="" alt="Лого HTML-Academy">
-    </span>
+    <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+      <img src="http://placehold.it/150x100" alt="Лого HTML-Academy">
+    </a>
   </footer>
 
 
