Правки по ревью

--- a/index.html
+++ b/index.html
@@ -28,21 +28,17 @@
   </nav>
   <main>
     <header class="main-header">
-      <b class="header-welcome">Welcome</b>
-      <p class="header-stile-description">to the gorgeous</p>
-      <h1 class="header-name">Sedona</h1>
-      <p class="header-quote">Because the Grand Canyon is sucks</p>
+      <img src="http://placehold.it/150x100" alt="Welcome to the gorgeous Sedona" width="600" height="300">
     </header>
     <div class="text-block">
       <p class="slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
       <p class="text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </div>
     <section class="reason-item">
-      <h2 class="visually-hidden">Причины, по которым Седона круче, чем Гранд Каньон</h2>
       <h3>Настоящий городок</h3>
-      <h4>№1</h4>
+      <span>№1</span>
       <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-      <img src="http://placehold.it/150x100" alt="Фото города">
+      <img src="http://placehold.it/150x100" alt="Фото города" width="150" height="100">
     </section>
     <section class="recommendations">
       <ul class="recommendations-list">
@@ -62,25 +58,25 @@
     </section>
     <section class="reason-item">
       <h3>Там есть мост дьявола</h3>
-      <h4>№2</h4>
+      <span>№2</span>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      <img src="http://placehold.it/150x100" alt="Фото каньона">
+      <img src="http://placehold.it/150x100" alt="Фото каньона" width="150" height="100">
     </section>
     <section class="reasons">
       <ul class="reasons-list">
         <li class="reason-item">
           <h3>Небольшая площадь</h3>
-          <h4>№3</h4>
+          <span>№3</span>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
         <li class="reason-item">
           <h3>Красивая дорога</h3>
-          <h4>№4</h4>
+          <span>№4</span>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
         <li class="reason-item">
           <h3>Мало туристов</h3>
-          <h4>№5</h4>
+          <span>№5</span>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </li>
       </ul>
@@ -91,6 +87,9 @@
           <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <button class="btn-search">Поиск гостиниц в Седоне</button>
       </section>
+      <div class="map">
+          <img src="http://placehold.it/150x100" alt="Карта" width="600" height="300">
+        </div>
   </main>
   <footer class="main-footer">
     <p class="footer-hashtag">#Visitsedona</p>
@@ -107,7 +106,7 @@
     </ul>
     <p>Website by</p>
     <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-      <img src="http://placehold.it/150x100" alt="Лого HTML-Academy">
+      <img src="http://placehold.it/150x100" alt="Лого HTML-Academy" width="150" height="100">
     </a>
   </footer>
 </body>
