--- a/inner.html
+++ b/inner.html
@@ -26,67 +26,83 @@
       </li>
     </ul>
   </nav>
-  <div>
+  <div class="sorting">
     <h3>Найдено: 3</h3>
     <p>Сортировка:</p>
     <ul>
-      <li><a href="">По цене</a></li>
-      <li><a href="">По типу</a></li>
-      <li><a href="">По рейтингу</a></li>
+      <li>
+        <a href="">По цене</a>
+      </li>
+      <li>
+        <a href="">По типу</a>
+      </li>
+      <li>
+        <a href="">По рейтингу</a>
+      </li>
     </ul>
+    <span>Кнопочки вверх</span>
+    <span>Кнопочка вниз</span>
   </div>
   <ul class="hotels-list">
     <li class="hotels-list-item hotel">
+      <p>
+        <img src="http://placehold.it/150x100" alt="Фото гостиницы" width="150" height="100">
+      </p>
       <h3>
         <a>Amara resort &amp; spa</a>
       </h3>
-      <p>
-        <img src="http://placehold.it/150x100" alt="Фото гостиницы">
-      </p>
-      <table>
-        <tr>
-          <td>Гостиницы</td>
-          <td>от 4000 р.</td>
-        </tr>
-      </table>
-      <a href="#" class="hotel-more">Подробнее</a>
-      <button class="hotel-book button-primary">Забронировать</button>
+      <div class="hotel-first-column">
+        <p>Гостиница</p>
+        <a href="#" class="hotel-more">Подробнее</a>
+      </div>
+      <div class="hotel-second-column">
+        <p>от 4000 р.</p>
+        <button class="hotel-book button-primary">Забронировать</button>
+      </div>
+      <div class="hotel-rating">
+          <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
       <p class="hotel-rating-text">Рейтинг 8,5</p>
+      </div>
     </li>
     <li class="hotels-list-item hotel">
+      <p>
+        <img src="http://placehold.it/150x100" alt="Фото апартаментов" width="150" height="100">
+      </p>
       <h3>
         <a>Desert Quail Inn</a>
       </h3>
-      <p>
-        <img src="http://placehold.it/150x100" alt="Фото апартаментов">
-      </p>
-      <table>
-        <tr>
-          <td>Мотель</td>
-          <td>от 3000 р.</td>
-        </tr>
-      </table>
-      <a href="#" class="hotel-more">Подробнее</a>
+      <div class="hotel-first-column">
+        <p>Мотель</p>
+      </div>
+      <div class="hotel-second-column">
+        <p>от 3000 р.</p>
+        <a href="#" class="hotel-more">Подробнее</a>
+      </div>
       <button class="hotel-book-иет">Забронировать</button>
+      <div class="hotel-rating">
+          <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
       <p class="hotel-rating-text">Рейтинг 8,9</p>
+      </div>
     </li>
     <li class="hotels-list-item hotel">
-
+      <p>
+        <img src="http://placehold.it/150x100" alt="Фото мотеля" width="150" height="100">
+      </p>
       <h3>
         <a>Desert Quail Inn</a>
       </h3>
-      <p>
-        <img src="http://placehold.it/150x100" alt="Фото мотеля">
-      </p>
-      <table>
-        <tr>
-          <td>Мотель</td>
-          <td>от 3000 р.</td>
-        </tr>
-      </table>
-      <a href="#" class="hotel-more">Подробнее</a>
-      <button class="hotel-book-btn">Забронировать</button>
-      <p class="hotel-rating-text">Рейтинг 9,2</p>
+      <div class="hotel-first-column">
+        <p>Апартаменты</p>
+        <a href="#" class="hotel-more">Подробнее</a>
+      </div>
+      <div class="hotel-second-column">
+        <p>от 2000 р.</p>
+        <button class="hotel-book-btn">Забронировать</button>
+      </div>
+      <div class="hotel-rating">
+        <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
+        <p class="hotel-rating-text">Рейтинг 9,2</p>
+      </div>
     </li>
   </ul>
   <footer class="main-footer">
@@ -104,7 +120,7 @@
     </ul>
     <p>Website by</p>
     <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-      <img src="http://placehold.it/150x100" alt="Лого HTML-Academy">
+      <img src="http://placehold.it/150x100" alt="Лого HTML-Academy" width="150" height="100">
     </a>
   </footer>
 
