Подключила контентные изображения в разметке

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <a class="main-logo">
-    <img src="http://placehold.it/150x100" alt="Логотип" width="150" height="100">
+    <img src="img/logo_mobile.png" alt="Логотип" width="138" height="70">
   </a>
   <nav class="main-navigation">
     <ul class="site-navigation">
@@ -28,7 +28,7 @@
   </nav>
   <main>
     <header class="main-header">
-      <img src="http://placehold.it/150x100" alt="Welcome to the gorgeous Sedona" width="600" height="300">
+      <img src="img/header_text_pic.png" alt="Welcome to the gorgeous Sedona" width="500" height="365">
     </header>
     <div class="text-block">
       <p class="slogan">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
@@ -38,19 +38,22 @@
       <h3>Настоящий городок</h3>
       <span>№1</span>
       <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-      <img src="http://placehold.it/150x100" alt="Фото города" width="150" height="100">
+      <img src="img/town_full.jpg" alt="Фото города" width="800" height="255">
     </section>
     <section class="recommendations">
       <ul class="recommendations-list">
         <li class="recommendation-item">
+          <img src="img/icon-1.svg" alt="Жилье" width="75" height="72">
           <h3>Жилье</h3>
           <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </li>
         <li class="recommendation-item">
+          <img src="img/icon-2.svg" alt="Еда" width="75" height="72">
           <h3>Еда</h3>
           <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li class="recommendation-item">
+          <img src="img/icon-3.svg" alt="Сувениры" width="75" height="72">
           <h3>Сувениры</h3>
           <p>Не только китайского, но и местного производства!</p>
         </li>
@@ -60,7 +63,7 @@
       <h3>Там есть мост дьявола</h3>
       <span>№2</span>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      <img src="http://placehold.it/150x100" alt="Фото каньона" width="150" height="100">
+      <img src="img/canyon_full.jpg" alt="Фото каньона" width="800" height="255">
     </section>
     <section class="reasons">
       <ul class="reasons-list">
@@ -80,16 +83,16 @@
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </li>
       </ul>
-      </section>
-      <section class="searching">
-        <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки,
-          <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button class="btn-search">Поиск гостиниц в Седоне</button>
-      </section>
-      <div class="map">
-          <img src="http://placehold.it/150x100" alt="Карта" width="600" height="300">
-        </div>
+    </section>
+    <section class="searching">
+      <h2>Заинтересовались?</h2>
+      <p>Укажите предполагаемые даты поездки,
+        <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <button class="btn-search">Поиск гостиниц в Седоне</button>
+    </section>
+    <div class="map">
+      <img src="img/map.png" alt="Карта" width="768" height="594">
+    </div>
   </main>
   <footer class="main-footer">
     <p class="footer-hashtag">#Visitsedona</p>
@@ -106,7 +109,7 @@
     </ul>
     <p>Website by</p>
     <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-      <img src="http://placehold.it/150x100" alt="Лого HTML-Academy" width="150" height="100">
+      <img src="img/logo-htmlacademy.svg" alt="Лого HTML-Academy" width="115" height="41">
     </a>
   </footer>
 </body>
