--- a/inner.html
+++ b/inner.html
@@ -8,7 +8,7 @@
 
 <body>
   <a class="main-logo">
-    <img src="http://placehold.it/150x100" alt="Логотип" width="150" height="100">
+    <img src="img/logo_mobile.png" alt="Логотип" width="138" height="70">
   </a>
   <nav class="main-navigation">
     <ul class="site-navigation">
@@ -40,13 +40,13 @@
         <a href="">По рейтингу</a>
       </li>
     </ul>
-    <span>Кнопочки вверх</span>
+    <span>Кнопочка вверх</span>
     <span>Кнопочка вниз</span>
   </div>
   <ul class="hotels-list">
     <li class="hotels-list-item hotel">
       <p>
-        <img src="http://placehold.it/150x100" alt="Фото гостиницы" width="150" height="100">
+        <img src="img/hotels-1.jpg" alt="Фото гостиницы" width="150" height="100">
       </p>
       <h3>
         <a>Amara resort &amp; spa</a>
@@ -60,13 +60,13 @@
         <button class="hotel-book button-primary">Забронировать</button>
       </div>
       <div class="hotel-rating">
-          <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
-      <p class="hotel-rating-text">Рейтинг 8,5</p>
+        <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
+        <p class="hotel-rating-text">Рейтинг 8,5</p>
       </div>
     </li>
     <li class="hotels-list-item hotel">
       <p>
-        <img src="http://placehold.it/150x100" alt="Фото апартаментов" width="150" height="100">
+        <img src="img/hotels-2.jpg" alt="Фото апартаментов" width="150" height="100">
       </p>
       <h3>
         <a>Desert Quail Inn</a>
@@ -80,13 +80,13 @@
       </div>
       <button class="hotel-book-иет">Забронировать</button>
       <div class="hotel-rating">
-          <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
-      <p class="hotel-rating-text">Рейтинг 8,9</p>
+        <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
+        <p class="hotel-rating-text">Рейтинг 8,9</p>
       </div>
     </li>
     <li class="hotels-list-item hotel">
       <p>
-        <img src="http://placehold.it/150x100" alt="Фото мотеля" width="150" height="100">
+        <img src="img/hotels-3.jpg" alt="Фото мотеля" width="150" height="100">
       </p>
       <h3>
         <a>Desert Quail Inn</a>
@@ -120,11 +120,9 @@
     </ul>
     <p>Website by</p>
     <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-      <img src="http://placehold.it/150x100" alt="Лого HTML-Academy" width="150" height="100">
+      <img src="img/logo-htmlacademy.svg" alt="Лого HTML-Academy" width="115" height="41">
     </a>
   </footer>
-
-
 </body>
 
 </html>
