Завершение разметки, доработка
- поправила ссылки
- поправила опечатку в 126 строке

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <nav class="main-navigation" aria-label="Содержимое сайта">
     <ul class="site-navigation">
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Информация</a>
+        <a href="#">Информация</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Фото и видео</a>
+        <a href="#">Фото и видео</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Карта штата</a>
+        <a href="#">Карта штата</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Гостиницы</a>
+        <a href="inner.html">Гостиницы</a>
       </li>
     </ul>
   </nav>
@@ -116,13 +116,13 @@
     <p class="footer-hashtag">#Visitsedona</p>
     <ul class="social-btn-list">
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="social-btn social-btn-twitter" aria-label="Твиттер">T</a>
+        <a href="#" class="social-btn social-btn-twitter" aria-label="Твиттер">T</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="social-btn social-btn-twitter" aria-label="Фейсбук">Ф</a>
+        <a href="#" class="social-btn social-btn-twitter" aria-label="Фейсбук">Ф</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="social-btn social-btn-yt" aria-label="Ютьюб">Y</a>
+        <a href="#" class="social-btn social-btn-yt" aria-label="Ютьюб">Y</a>
       </li>
     </ul>
     <p>Website by</p>
