--- a/inner.html
+++ b/inner.html
@@ -7,22 +7,22 @@
 </head>
 
 <body>
-  <a href="https://htmlacademy.ru/intensive/htmlcss" class="main-logo">
+  <a href="index.html" class="main-logo">
     <img src="img/logo_mobile.png" alt="Логотип" width="138" height="70">
   </a>
   <nav class="main-navigation">
     <ul class="site-navigation">
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Информация</a>
+        <a href="#">Информация</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Фото и видео</a>
+        <a href="#">Фото и видео</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Карта штата</a>
+        <a href="#">Карта штата</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="site-navigation-current">Гостиницы</a>
+        <a href="inner.html" class="site-navigation-current">Гостиницы</a>
       </li>
     </ul>
   </nav>
@@ -77,13 +77,13 @@
     <p>Сортировка:</p>
     <ul>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">По цене</a>
+        <a href="#">По цене</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">По типу</a>
+        <a href="#">По типу</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">По рейтингу</a>
+        <a href="#">По рейтингу</a>
       </li>
     </ul>
     <button class="button visually-hidden">Кнопочка вверх</button>
@@ -95,11 +95,11 @@
         <img src="img/hotels-1.jpg" alt="Фото гостиницы" width="150" height="100">
       </p>
       <h3>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Amara resort &amp; spa</a>
+        <a href="#">Amara resort &amp; spa</a>
       </h3>
       <div class="hotel-first-column">
         <p>Гостиница</p>
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="hotel-more">Подробнее</a>
+        <a href="#" class="hotel-more">Подробнее</a>
       </div>
       <div class="hotel-second-column">
         <p>от 4000 р.</p>
@@ -115,15 +115,15 @@
         <img src="img/hotels-2.jpg" alt="Фото апартаментов" width="150" height="100">
       </p>
       <h3>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">Desert Quail Inn</a>
+        <a href="#">Desert Quail Inn</a>
       </h3>
       <div class="hotel-first-column">
         <p>Мотель</p>
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="hotel-more">Подробнее</a>
+        <a href="#" class="hotel-more">Подробнее</a>
       </div>
       <div class="hotel-second-column">
         <p>от 3000 р.</p>
-        <button class="hotel-book-иет">Забронировать</button>
+        <button class="hotel-book-btn">Забронировать</button>
       </div>
       <div class="hotel-rating">
         <img src="http://placehold.it/150x100" alt="Звездочки" width="60" height="20">
@@ -139,7 +139,7 @@
       </h3>
       <div class="hotel-first-column">
         <p>Апартаменты</p>
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="hotel-more">Подробнее</a>
+        <a href="#" class="hotel-more">Подробнее</a>
       </div>
       <div class="hotel-second-column">
         <p>от 2000 р.</p>
@@ -155,13 +155,13 @@
     <p class="footer-hashtag">#Visitsedona</p>
     <ul class="social-btn-list">
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="social-btn social-btn-twitter" aria-label="Твиттер">T</a>
+        <a href="#" class="social-btn social-btn-twitter" aria-label="Твиттер">T</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="social-btn social-btn-twitter" aria-label="Фейсбук">Ф</a>
+        <a href="#" class="social-btn social-btn-twitter" aria-label="Фейсбук">Ф</a>
       </li>
       <li>
-        <a href="https://htmlacademy.ru/intensive/htmlcss" class="social-btn social-btn-yt" aria-label="YouTube">Y</a>
+        <a href="#" class="social-btn social-btn-yt" aria-label="YouTube">Y</a>
       </li>
     </ul>
     <p>Website by</p>
