--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <a href="https://htmlacademy.ru/intensive/htmlcss" class="main-logo">
+  <a href="index.html" class="main-logo">
     <img src="img/logo_mobile.png" alt="Логотип Седоны" width="138" height="70">
   </a>
   <nav class="main-navigation" aria-label="Содержимое сайта">
