--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <a href="index.html" class="main-logo">
     <img src="img/logo_mobile.png" alt="Логотип Седоны" width="138" height="70">
   </a>
-  <nav class="main-navigation" aria-label="Содержимое сайта">
+  <nav class="main-navigation">
     <ul class="site-navigation">
       <li>
         <a href="#">Информация</a>
